Fix for logrotate.d template

--- a/templates/logrotate.d.j2
+++ b/templates/logrotate.d.j2
@@ -4,7 +4,7 @@
 {% endfor %}
 {
 {% else %}
-{{ item.path }} {
+{{ item.path | join(' ') }} {
 {% endif %}
 {% for option in item.options %}
     {{ option }}
